--- a/ios/CARFIT.xcodeproj/xcshareddata/xcschemes/CARFIT Debug.xcscheme
+++ b/ios/CARFIT.xcodeproj/xcshareddata/xcschemes/CARFIT Debug.xcscheme
@@ -93,7 +93,7 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -113,7 +113,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
