--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "options": "0.0.6",
     "react": "~15.4.0-rc.4",
     "react-addons-create-fragment": "^15.4.2",
+    "react-dom": "^15.5.4",
     "react-move": "^1.0.1",
     "react-native": "0.40.0",
     "react-native-code-push": "1.17.0-beta",
@@ -56,8 +57,7 @@
     "react-native-spinner": "0.0.3",
     "react-native-swiper": "^1.5.4",
     "react-native-timer-mixin": "^0.11.0",
-    "react-native-vector-icons": "^4.0.1",
-    "react-phone-number-input": "^0.10.4",
+    "react-native-vector-icons": "^4.1.1",
     "react-redux": "^5.0.1",
     "react-redux-spinner": "^0.5.0",
     "redux": "^3.6.0",
