--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-modal-picker": "0.0.16",
     "react-native-modalbox": "^1.3.8",
     "react-native-navigation-redux-helpers": "^0.5.0",
+    "react-native-phone-input": "^0.1.8",
     "react-native-responsive-dimensions": "^1.0.1",
     "react-native-simple-modal": "^5.0.0",
     "react-native-simple-picker": "^1.2.1",
