--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^15.5.4",
     "react-move": "^1.0.1",
     "react-native": "0.40.0",
+    "react-native-auth0": "^1.0.0-beta.1",
     "react-native-code-push": "1.17.0-beta",
     "react-native-device": "^1.0.1",
     "react-native-drawer": "https://github.com/michaelkirschbaum/react-native-drawer/tarball/16a34783eedaec2ec04b7962cb2efa8668f26d9d",
